dist/1.0/bin/sample/retrieveUnpackaged/objects/RRLL__c.object
<CustomObject>
    <description>Roof Rental, Leased Line, Crossborder</description>
    <fields>
        <fullName>ACC_Account__c</fullName>
        <description>Z CRMa</description>
        <label>ACC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RRLL2Account</relationshipLabel>
        <relationshipName>RRLL2Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC__c</fullName>
        <label>ACC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accrual_account__c</fullName>
        <label>Accrual account</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Informuje czy element jest aktywny.</description>
        <label>Active</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Costs_Agreement__c</referenceTo>
        <relationshipLabel>RRLL2Agreement</relationshipLabel>
        <relationshipName>RRLL2Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appendix__c</fullName>
        <description>Appendix associated with this element</description>
        <inlineHelpText>Appendix associated with this element</inlineHelpText>
        <label>Appendix</label>
        <referenceTo>Costs_Agreement__c</referenceTo>
        <relationshipLabel>RRLL2Appendix</relationshipLabel>
        <relationshipName>RRLL2Appendix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bandwidth_Description__c</fullName>
        <description>Leased Lines</description>
        <label>Bandwidth Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwith__c</fullName>
        <description>Leased Lines</description>
        <label>Bandwith</label>
        <picklist>
            <picklistValues>
                <fullName>128 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>512 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1024 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2048 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15B+D (PRA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Gbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>256 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B+D (BRA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Gb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30B+D (PRA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4096 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Mbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64 kbps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64 Mbps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Leased Lines</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <label>Call</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colocation_rack_piece__c</fullName>
        <description>Roofs Rental</description>
        <label>Colocation rack/piece</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment1__c</fullName>
        <label>Netcontracts Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment2__c</fullName>
        <label>Controling and Planning Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment3__c</fullName>
        <label>Accounting Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_Site_A__c</fullName>
        <label>Comment (Site A)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_Site_B__c</fullName>
        <description>Leased Lines</description>
        <label>Comment (Site B)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Energis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Polska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_CR__c</fullName>
        <description>Leased Lines</description>
        <label>Contract CR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Rome__c</fullName>
        <description>Roofs Rental</description>
        <label>Contract Rome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_Specified_Term__c</fullName>
        <description>Leased Lines</description>
        <label>Contract Termination (Specified Term)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_account__c</fullName>
        <label>Cost account</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Signing__c</fullName>
        <label>Date of Signing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_In_Percent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount In Percent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_start_date__c</fullName>
        <label>Discount start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Service__c</fullName>
        <label>End of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Owner__c</fullName>
        <label>Financial Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>RRLL2User(Financial Owner)</relationshipLabel>
        <relationshipName>RRLL2User_FO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identification_number__c</fullName>
        <label>Identification number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced_until__c</fullName>
        <label>Invoiced until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KAM__c</fullName>
        <description>Z CRMa</description>
        <label>KAM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_km__c</fullName>
        <description>Leased Lines</description>
        <label>Length (km)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lesse_Information__c</fullName>
        <description>Leased Lines</description>
        <label>Lesse Information</label>
        <picklist>
            <picklistValues>
                <fullName>Atom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom (BN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom (CORE-CORE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom (CORE-POP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom (CR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom (POP-POP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmowe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Energis (CR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Polska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Polska (CR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT (BN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT (CORE-CORE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT (CORE-POP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT (CR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Klient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POP-POP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProNet (DORE-POP)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licence__c</fullName>
        <description>Leased Lines</description>
        <label>Licence</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_ID__c</fullName>
        <description>Leased Lines</description>
        <label>Link ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOR_account__c</fullName>
        <label>MOR account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_of_One_off__c</fullName>
        <label>Month of One off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee_CUR__c</fullName>
        <label>Monthly Fee CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee_PLN__c</fullName>
        <label>Monthly Fee (PLN)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_discounted__c</fullName>
        <label>Monthly discounted</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NIP__c</fullName>
        <label>NIP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Sign__c</fullName>
        <label>Node Sign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node__c</fullName>
        <label>Node</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Item__c</fullName>
        <label>Old Item</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Off_Fee_PLN__c</fullName>
        <label>One Off Fee PLN</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_off_fee_CUR__c</fullName>
        <label>One off fee CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>One_off_fee__c</fullName>
        <label>One off fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Customer__c</fullName>
        <label>Our Customer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Service__c</fullName>
        <description>Leased Lines</description>
        <label>Our Service</label>
        <picklist>
            <picklistValues>
                <fullName>IP VPN Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPVPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPLS, IP, VPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>LL2User(Owner)</relationshipLabel>
        <relationshipName>LL2User_O</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <description>Leased Lines</description>
        <label>PIN</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PUK__c</fullName>
        <description>Leased Lines</description>
        <label>PUK</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paym_Since__c</fullName>
        <label>Paym Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_for_the_lenght__c</fullName>
        <description>Leased Lines</description>
        <label>Payment for the lenght</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Leased Lines</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Planned_Start_of_Service__c</fullName>
        <label>Planned Start of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_on_the_invoice__c</fullName>
        <label>Position on the invoice</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_CUR__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_antenna_CUR__c</fullName>
        <label>Price per antenna CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_per_antenna__c</fullName>
        <label>Price per antenna</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_antenna_size__c</fullName>
        <label>Size</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_construction_CUR__c</fullName>
        <label>Price per construction CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_per_construction__c</fullName>
        <label>Price per construction</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_construction_quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_m2_CUR__c</fullName>
        <description>Roofs Rental</description>
        <label>Price per [m2]  CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_per_m2__c</fullName>
        <description>Roofs Rental</description>
        <label>Price per [m2]</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_radio_dish_CUR__c</fullName>
        <description>Roofs Rental</description>
        <label>Price per radio/dish CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_per_radio_dish__c</fullName>
        <description>Roofs Rental</description>
        <label>Price per rack/piece</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_riser_CUR__c</fullName>
        <description>Roofs Rental</description>
        <label>Price per riser CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_per_riser__c</fullName>
        <description>Roofs Rental</description>
        <label>Price per riser</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Leased Lines</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>511300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>511800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>512300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>513100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>517200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>521100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>522100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>522200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>524100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>524200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>525100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>525200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>526100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>531100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>533100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>541200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>541300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>807837</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>912100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>912160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>913100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>915100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>917400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>921100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>922100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>922200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>924100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>924200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>925100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>931100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <description>Leased Lines</description>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>LL2User(Project Manager)</relationshipLabel>
        <relationshipName>LL2User_PM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Leased Lines</description>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_ID__c</fullName>
        <label>Nextno</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROME_Site_Name__c</fullName>
        <description>Roofs Rental</description>
        <label>Site Name based on ROME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Id__c</fullName>
        <label>RR Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_City__c</fullName>
        <description>Roofs Rental</description>
        <label>Region City</label>
        <picklist>
            <picklistValues>
                <fullName>dolno�l�skie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kujawsko-pomorskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lubelskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lubuskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>��dzkie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ma�opolskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mazowieckie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>opolskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>podkarpackie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>podlaskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pomorskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>�l�skie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>�wi�tokrzyskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>warmi�sko-mazurskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>wielkopolskie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zachodniopomorskie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <description>Name of the raport</description>
        <label>Report</label>
        <picklist>
            <picklistValues>
                <fullName>Rental Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crossborder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Right_of_way_Price_per_km_CUR__c</fullName>
        <description>Roofs Rental</description>
        <label>Right of way/Price per km CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Right_of_way_Price_per_km__c</fullName>
        <description>Roofs Rental</description>
        <label>Right of way /Price per km</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_of_way__c</fullName>
        <description>Roofs Rental</description>
        <label>Right of way</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Riser__c</fullName>
        <description>Roofs Rental</description>
        <label>Riser</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIM_card_number__c</fullName>
        <description>Leased Lines</description>
        <label>SIM card number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scala__c</fullName>
        <label>Scala</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_CUR__c</fullName>
        <label>Security CUR</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <label>Security</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Should_be_paid_till__c</fullName>
        <label>Should be paid till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_A_node__c</fullName>
        <label>Site A (node)</label>
        <referenceTo>Site_A_B__c</referenceTo>
        <relationshipLabel>RRLL2SiteA</relationshipLabel>
        <relationshipName>RRLL2SiteA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_B_Customer__c</fullName>
        <description>Leased Lines</description>
        <label>Site B (Customer)</label>
        <referenceTo>Site_A_B__c</referenceTo>
        <relationshipLabel>LL2SiteB</relationshipLabel>
        <relationshipName>LL2SiteB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>